# sphinx-highlights

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: actions_deploy_conda.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  conda_ci.yml  mypy.yml  octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  demo.rst  index.rst  license.rst  local_extension.py  requirements.txt  usage.rst
doc-source/_static/: style.css
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: sphinx-highlights.rst
sphinx_highlights/: __init__.py  _eval_type.py
tests/: conftest.py  requirements.txt  test_copy_assets.py
tests/test_copy_assets_/: test_copy_asset_files_sphinx_highlights.css
tests/test_output/: conftest.py  test_output.py
tests/test_output/doc-test/test-root/: conf.py  index.rst
tests/test_output/test_output_/: test_html_output_index_html_.html  test_latex_output.tex
