[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx-highlights"
version = "0.2.0"
description = "Sphinx extension to display a selection of highlights from a Python library."
readme = "README.rst"
keywords = [ "sphinx", "documentation", "sphinx-extension",]
dynamic = [ "requires-python", "classifiers", "dependencies",]
[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/sphinx-toolbox/sphinx-highlights"
"Issue Tracker" = "https://github.com/sphinx-toolbox/sphinx-highlights/issues"
"Source Code" = "https://github.com/sphinx-toolbox/sphinx-highlights"
Documentation = "https://sphinx-highlights.readthedocs.io/en/latest"
